<resources>
    <string name="app_name">StudHelp</string>
    <string name="connexion">Connexion</string>
    <string name="sing_up">Se créer un compte</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="previous_password">Mot de passe actuel</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="name">Nom complet</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirmez le mot de passe</string>
    <string name="signup">S\'inscrire</string>
    <string name="title_activity_course_list">CourseListActivity</string>
    <string name="add_advertisement_button">Poster l\'annonce</string>
    <string name="backup">Sauvegarder mes modifications</string>
    <string name="edit_password">Modifier mon mot de passe</string>
    <string name="profil">Profil</string>
    <string name="favorites">Mes cours favoris</string>
    <string name="courses">Cours</string>
    <string name="social_network_underline"><u>Mes réseaux sociaux :</u></string>
    <string name="social_network_other_user"><u>Réseaux sociaux pour contacter la personne :</u></string>
    <string name="social_network">Mes réseaux sociaux :</string>
    <string name="no_social_network_advertisment">Vous n\'avez pas encore ajouté de réseau social.</string>
    <string name="no_social_network_other_user">Cette personne n\'est pas contactable car elle n\'a pas encore ajouté ses réseaux sociaux.</string>
    <string name="personal_information_underline"><u>Mes données personelles :</u></string>
    <string name="social_network_public_advertissemnt">Ces données seront publiques, tous les utilisateurs pourront y accéder.</string>
    <string name="teams">Email de votre compte Teams</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="email_public">Email privé</string>
    <string name="discord">Pseudo#Tag</string>
    <string name="deconnexion">Se déconnecter</string>
    <string name="my_bookmarks">Mes signets</string>
    <string name="no_bookmarks">Vous n\'avez pas de signet pour le moment</string>
    <string name="no_connection">Pas de connexion internet</string>


    <!-- tests strings -->

    <string name="root_button">Root</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="advertisement_view_title_text">Ad title (that might be a very very long title) YESSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS</string>
    <string name="advertisement_view_owner_text">Username</string>
    <string name="advertisement_view_description_text">Description</string>
    <string name="advertisement_type_hint">Choisissez le type de votre annonce</string>
    <string name="advertisement_description_hint">Description de votre annonce</string>
    <string name="advertisement_title_hint">Titre de votre annonce</string>
    <string name="advertisement_type_view">Advertisement type</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="favorites_switch_text">Favoris</string>
    <string name="myadvertisements">Mes annonces</string>
    <string name="rememberme">Rester connecté</string>
    <string name="no_advertisement_text">Ce cours n\'a pas encore d\'annonce, n\'hésitez pas à en ajouter!</string>
    <string name="search_bar_title_string">Recherche</string>
    <string name="query_hint_string">Code, nom de cours, ou faculté</string>
    <string name="categorical_search_title_string">Facultés</string>
    <string name="nav_home_string">Recherche</string>
    <string name="firstTab">Données</string>
    <string name="secondTab">Contacts</string>
    <string name="thirdTab">Annonces</string>
    <string name="add_advertisement_type_title">Type de l\'annonce</string>
    <string name="add_advertisement_object_title">Objet(s) de l\'annonce</string>
    <string name="add_advertisement_cycle_title">Cycle(s) correspondant(s) à l\'annonce</string>
    <string name="contacter_l_annonceur">Contacter l\'annonceur</string>
    <string name="updateAdvertisement">Modifier mon annonce</string>
    <string name="notification_channel_id">myCanal</string>
    <string name="notification_channel_title">myTitle</string>
    <string name="notification_channel_desc">This is the test canal</string>
    <string name="advertisement_course_card_view_code_text">Code du cours</string>
    <string name="advertisement_course_card_view_fac_text">FAC</string>
    <string name="advertisement_list_filter_title_text">Filtres de recherche\nSélectionnez les conditions que les annonces affichées doivent remplir</string>
    <string name="myadvertisements_hint">Toutes vos annonces sont affichées ici.</string>
    <string name="descriptionHint1">Votre age ?</string>
    <string name="descriptionHint2">Quelles sont vos études ? (bac/master)</string>
    <string name="descriptionHint3">En quoi ? (SINF, Eco,..)</string>
    <string name="descriptionHint4">Vos moyens de payement ?</string>
    <string name="advertisement_item_date_string">Créée le 00-00-0000</string>
    <string name="go_to_favourites_courses_string">Voir mes cours favoris</string>
    <string name="edit_profile_picture">Changer photo</string>
    <string name="no_private_advertisment">Vous n\'avez pas encore posté d\'annonce</string>
    <string name="no_advertisment">Aucune annonce a été posté</string>
    <string name="add_picture_button">Prendre une photo</string>
    <string name="no_courses_text">Il n\'y a pas de cours dans cette catégorie</string>
    <string name="add_pictureFromGalery_button">Ajouter une photo</string>
    <string name="file_title_hint">Titre de la synthese</string>
    <string name="add_file_button">Ajouter une synthese</string>
    <string name="file_requirements">Doit etre un fichier au format PDF, max 10 Mo</string>
    <string name="my_bookmarks_hint">Vos signets sont affichés ici.</string>
    <string name="firstTabAdvertisement">Annonces</string>
    <string name="secondTabAdvertisement">Syntheses</string>
    <string name="password_requirements_text">Votre mot de passe doit contenir au moins 8 caractères dont :\n- un chiffre\n- une majuscule\n- une minuscule</string>

</resources>