<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/profil"
             />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/nav_home_string"/>
        <!--<item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_books"
            android:title="@string/courses" />-->
        <item
            android:id="@+id/nav_myadvertisements"
            android:icon="@drawable/ic_pen"
            android:title="@string/myadvertisements"
            />

        <item
            android:id="@+id/nav_mybookmarks"
            android:icon="@drawable/ic_baseline_bookmarks_24"
            android:title="@string/my_bookmarks"
            />
    </group>
</menu>