<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingBottom="60dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:focusable="true">

            <com.google.android.material.textfield.TextInputLayout
                app:errorTextColor="@color/design_default_color_error"
                app:boxStrokeErrorColor="@color/design_default_color_error"
                android:id="@+id/advertisement_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/advertisement_title_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/advertisement_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:errorTextColor="@color/design_default_color_error"
                app:boxStrokeErrorColor="@color/design_default_color_error"
                android:id="@+id/advertisement_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/advertisement_description_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/advertisement_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:autoSizeTextType="uniform"
                    android:gravity="top"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/add_advertisement_type_title_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_advertisement_type_title"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/add_advertisement_type_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/add_advertisement_cycle_title_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_advertisement_cycle_title"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/add_advertisement_cycle_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/add_advertisement_object_title_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_advertisement_object_title"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/add_advertisement_object_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/chip_group_unckecked_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/add_advertisment_picture"
                    android:layout_width="120dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"

                     />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <Button
                android:id="@+id/add_picture_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                android:text="@string/add_picture_button" />
                <Button
                    android:id="@+id/add_picturefromgalery_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/add_pictureFromGalery_button" />
            </LinearLayout>

        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>